--- a/src/proj/brightside/src/output/graph.html
+++ b/src/proj/brightside/src/output/graph.html
@@ -26,7 +26,7 @@ body {
 
 </style>
 <body>
-<script src="d3.min.js"></script>
+<script src="d3.v3.js"></script>
 <script>
 
 var diagonal = d3.svg.diagonal()
