--- a/src/proj/brightside/src/output/subgraphs.html
+++ b/src/proj/brightside/src/output/subgraphs.html
@@ -40,7 +40,7 @@ body {
 <div id="graphs_container">
 </div>
 
-<script src="d3.min.js"></script>
+<script src="d3.v3.js"></script>
 
 <script>
 $window_size = 9;
