--- a/src/pylowl/proj/brightside/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/postproc/subgraphs.html
@@ -35,6 +35,9 @@ body {
     <div id="status">
         showing graphs <span id="window_start_text"></span> to <span id="window_end_text"></span> of <span id="num_graphs_text"></span>
     </div>
+    <div id="showCounts">
+        show counts: <input type="checkbox" onchange="update_graphs();" id="showValues"/>
+    </div>
 </div>
 
 <div id="graphs_container">
@@ -81,32 +84,48 @@ update_graphs = function() {
       var svg = d3.select("#graphs_container").append("svg")
           .attr("width", $width)
           .attr("height", $height)
-        .append("g")
+          .append("g")
           .attr("transform", "translate(20,0)")
       svg.append("title").text(identifier);
 
-      var nodes = cluster.nodes($root[c]["subtree"]),
-          links = cluster.links(nodes);
+      var nodes = cluster.nodes($root[c]["subtree"]);
+      var links = cluster.links(nodes);
+
+
 
       var link = svg.selectAll(".link")
           .data(links)
-        .enter().append("path")
+          .enter().append("path")
           .attr("class", "link")
           .attr("d", diagonal)
           .style("stroke-opacity", function(d) { return d.target.active ? "1" : "0.1"; });
 
       var node = svg.selectAll(".node")
           .data(nodes)
-        .enter().append("g")
+          .enter().append("g")
           .attr("class", "node")
           .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
-          .style("stroke-opacity", function(d) { return d.active ? "1" : "0.05"; })
-          .style("fill-opacity", function(d) { return d.active ? "1" : "0.05"; });
+          .style("stroke-opacity", function(d) { return d.active ? 1 : "0.05"; })
+        .style("fill-opacity", function(d) { return d.active ? 1 : "0.05"; });
 
-      node.append("circle")
-          .attr("r", 4.5);
+        node.append("circle")
+        .attr("r", 4.5 );
+
+        if(document.getElementById("showValues").checked == true){
+            node.append("text")
+            .attr("dx", 8)
+            .attr("dy", 11)
+            .style("text-anchor","start")
+            .text(function(d) {return d.active ? Math.floor(Math.random()*100) : null});
+        }
+
+
+
+
+
     }
 }
+
 update_window_size = function() {
     $window_size = parseInt(document.getElementById("window_size").value, 10);
     $num_windows = Math.ceil($num_graphs / $window_size);
