--- a/src/pylowl/proj/brightside/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/postproc/subgraphs.html
@@ -78,7 +78,7 @@ update_graphs = function() {
 
     for (var c = $window_start; c < $window_end; ++c) {
       var cluster = d3.layout.cluster()
-          .size([$height, $width - 40]);
+          .size([$height - 10, $width - 40]);
 
       var identifier = $root[c]["identifier"];
       var svg = d3.select("#graphs_container").append("svg")
@@ -181,7 +181,7 @@ tree_size_per_level = function(node) {
 
 d3.json("subgraphs.json", function(error, root) {
     $width = 100 * tree_depth(root[0]["subtree"]) + 100;
-    $height = 15 * Math.max.apply(null, tree_size_per_level(root[0]["subtree"]));
+    $height = 15 * Math.max.apply(null, tree_size_per_level(root[0]["subtree"])) + 10;
     $root = root;
 
     $num_graphs = root.length;
