undisappear html, head, body in visualization

--- a/src/pylowl/proj/brightside/postproc/graph.html
+++ b/src/pylowl/proj/brightside/postproc/graph.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<html>
+<head>
+
 <meta charset="utf-8">
 <style>
 
@@ -25,7 +28,10 @@ body {
 }
 
 </style>
+
+</head>
 <body>
+
 <script src="d3.v3.js"></script>
 <script>
 
@@ -120,3 +126,6 @@ d3.json("graph.json", function(error, root) {
 });
 
 </script>
+
+</body>
+</html>
