--- a/src/pylowl/proj/brightside/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/postproc/subgraphs.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<html>
+<head>
+
 <meta charset="utf-8">
     <style>
 
@@ -23,7 +26,9 @@
         }
 
         </style>
-    <body>
+
+</head>
+<body>
 
         <div>
             <div>
@@ -210,3 +215,6 @@
                     });
 
             </script>
+
+</body>
+</html>
