--- a/src/pylowl/proj/brightside/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/postproc/subgraphs.html
@@ -63,7 +63,7 @@ $num_windows = 0;
 $num_graphs = 0;
 
 node_size = function(d) {
-    return d.active ? d.Elogtheta+12 : 4.5;
+    return d.active ? d.Elogpi+12 : 4.5;
 }
 
 set_node_text = function(node, text) {
