--- a/src/pylowl/proj/brightside/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/postproc/subgraphs.html
@@ -267,6 +267,30 @@ d3.json("subgraphs.json", function(error, root) {
         return min_var_param;
     }
 
+	maximum_Node_Size_rootParent = function(min_var_param, root){
+        min_var_param = 0;
+        for(indiv = 0; indiv < $num_graphs; indiv++){
+            minSubStat = maximum_Node_Size_subtreeChildren(min_var_param, root[indiv]["subtree"]);
+            if(minSubStat>min_var_param){
+                min_var_param = minSubStat;
+            }
+        }
+        return min_var_param;
+    }
+
+	maximum_Node_Size_subtreeChildren = function(min_var_param, node){
+        if(min_var_param < node_size(node)){
+            min_var_param = node_size(node);
+        }
+        for (var c in node.children) {
+            child = node.children[c];
+            min_var_param = maximum_Node_Size_subtreeChildren(min_var_param, child);
+        }
+        return min_var_param;
+    }
+
+	maxNodeSize = 0;
+	maxNodeSize = maximum_Node_Size_rootParent(maxNodeSize, $root);
     maxLambda_ss = 0;
     maxLambda_ss = maximum_Lambda_ss_rootParent(maxLambda_ss, $root);
     minELogPi = 0;
