--- a/src/pylowl/proj/brightside/postproc/graph.html
+++ b/src/pylowl/proj/brightside/postproc/graph.html
@@ -27,6 +27,11 @@ body {
   stroke-width: 1.5px;
 }
 
+#lambda_text {
+	background-color: #EEEEEE;
+}
+
+
 </style>
 
 </head>
@@ -58,6 +63,19 @@ make_format_words = function(min_font, font_exp_scale) {
         s += "</div>";
         return s;
     }
+}
+
+node_sizer = function(node){
+	node_size = 0;
+	for(word = 0; word < node.words.length; word++){
+		node_size += node.words[word].lambda_ss;
+	}
+	return node_size;
+}
+
+add_lambda_ss_text = function(font_size){
+	return function(d){ return "<div id=\"lambda_text\" style=\"font-size: " + font_size +"px\">" + Math.round(10000*node_sizer(d))/10000 + "</div>";
+	}
 }
 
 update_graph = function() {
@@ -108,8 +126,12 @@ update_graph = function() {
         .style("fill-opacity", function(d) { return 0.1 + 0.9*(d.Elogpi-minELogPi)/(minELogPi*-1);});
 
     if(document.getElementById("showValues").checked == true){
-        node.append("text").attr("dx",0).attr("dy",-11).style("text-anchor","start")
-        .text(function(d){return Math.round(10000*Math.pow(Math.E,d.logEpi))/10000});
+		node.append("foreignObject")
+		.attr("width", 80)
+		.attr("height", 30)
+		.attr("y", -20)
+		.append("xhtml:body")
+		.html(add_lambda_ss_text(10));
     }
 }
 
@@ -159,14 +181,6 @@ top_words = function(node) {
             }
         }
     }
-}
-
-node_sizer = function(node){
-	node_size = 0;
-	for(word = 0; word < node.words.length; word++){
-		node_size += node.words[word].lambda_ss;
-	}
-	return node_size;
 }
 
 d3.json("graph.json", function(error, root) {
