--- a/src/pylowl/proj/brightside/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/postproc/subgraphs.html
@@ -60,7 +60,7 @@ body {
             id="num_graphs_text"></span>
     </div>
     <div id="showCounts">
-        show counts: <input type="checkbox"
+        <label for="showValues">show counts: </label><input type="checkbox"
         onchange="update_graphs();" id="showValues"/>
     </div>
 	</div>
