--- a/src/pylowl/proj/brightside/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/postproc/subgraphs.html
@@ -102,7 +102,7 @@ update_nav_text = function() {
     set_node_text(document.getElementById("window_end_text"), $window_end);
     set_node_text(document.getElementById("num_graphs_text"), $num_graphs);
 }
-    
+
 update_graphs = function() {
     update_nav_text();
 
@@ -112,7 +112,7 @@ update_graphs = function() {
     }
 
     var stringColor =
-    d3.scale.linear().domain([0,-1*minELogPi]).range(["red","blue"]);
+    d3.scale.linear().domain([minEtime, maxEtime]).range(["red","blue"]);
 
     for (var c = $window_start; c < $window_end; ++c) {
         var cluster = d3.layout.cluster()
@@ -160,9 +160,9 @@ update_graphs = function() {
         node.append("circle")
         .attr("r", function(d) { return node_size(d); })
         .style("fill", function(d) {return d.active ?
-               stringColor(d.Elogpi*-1) : "black"})
+               stringColor(d.expected_time) : "black"})
         .style("stroke", function(d) {return d.active ?
-               stringColor(d.Elogpi*-1) : "black"})
+               stringColor(d.expected_time) : "black"})
         .style("stroke-opacity", function(d) { return d.active ?
                (0.1 + 0.9*(d.Elogpi-minELogPi)/(minELogPi*-1)) : "0.05"; })
         .style("fill-opacity", function(d) { return d.active ?
@@ -246,28 +246,50 @@ d3.json("subgraphs.json", function(error, root) {
     $num_graphs = root.length;
 	$root = root;
 
-    minimum_ELogPi_rootParent = function(min_var_param, root, paramName){
+    minimum_param_rootParent = function(root, paramName){
     min_var_param = 0;
     for(indiv = 0; indiv < $num_graphs; indiv++){
-        minSubStat = minimum_ELogPi_subtreeChildren(min_var_param, root[indiv]["subtree"], paramName);
-        if(minSubStat<min_var_param){
+        minSubStat = minimum_param_subtreeChildren(min_var_param, root[indiv]["subtree"], paramName);
+        if(minSubStat < min_var_param){
             min_var_param = minSubStat;
         }
     }
     return min_var_param;
     }
 
-    minimum_ELogPi_subtreeChildren = function(min_var_param, node, paramName){
+    minimum_param_subtreeChildren = function(min_var_param, node, paramName){
         if(min_var_param > node[paramName]){
             min_var_param = node[paramName];
         }
         for (var c in node.children) {
             child = node.children[c];
-        	min_var_param = minimum_ELogPi_subtreeChildren(min_var_param, child, paramName);
+        	min_var_param = minimum_param_subtreeChildren(min_var_param, child, paramName);
         }
         return min_var_param;
     }
 
+	maximum_param_rootParent = function(root, paramName){
+    max_var_param = 0;
+    for(indiv = 0; indiv < $num_graphs; indiv++){
+        maxSubStat = maximum_param_subtreeChildren(max_var_param, root[indiv]["subtree"], paramName);
+        if(maxSubStat > max_var_param){
+            max_var_param = maxSubStat;
+        }
+    }
+    return max_var_param;
+    }
+
+	maximum_param_subtreeChildren = function(max_var_param, node, paramName){
+        if(max_var_param < node[paramName]){
+            max_var_param = node[paramName];
+        }
+        for (var c in node.children) {
+            child = node.children[c];
+        	max_var_param = maximum_param_subtreeChildren(max_var_param, child, paramName);
+        }
+        return max_var_param;
+    }
+	
 	maximum_Node_Size_rootParent = function(min_var_param, root){
         min_var_param = 0;
         for(indiv = 0; indiv < $num_graphs; indiv++){
@@ -292,8 +314,8 @@ d3.json("subgraphs.json", function(error, root) {
 
 	maxNodeSize = 0;
 	maxNodeSize = maximum_Node_Size_rootParent(maxNodeSize, $root);
-    minELogPi = 0;
-    minELogPi = minimum_ELogPi_rootParent(minELogPi, $root, "Elogpi");
+	maxEtime = maximum_param_rootParent($root, "expected_time");
+    minEtime = minimum_param_rootParent($root, "expected_time");
 
 	$width = maxNodeSize * 16 * (tree_depth(root[0]["subtree"])+1) + maxNodeSize;
     $height = maxNodeSize * 2.5 * Math.max.apply(null,
