--- a/src/pylowl/proj/brightside/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/postproc/subgraphs.html
@@ -168,6 +168,15 @@ update_graphs = function() {
         .style("fill-opacity", function(d) { return d.active ?
                (0.1 + 0.9*(d.Elogpi-minELogPi)/(minELogPi*-1)) : "0.05"; });
 
+        node.append("circle")
+        .attr("r", maxNodeSize)
+        .style("fill", "black")
+        .style("stroke", "black")
+        .style("stroke-opacity", "0")
+        .style("fill-opacity", "0")
+        .append("title")
+        .text(function(d){return d.words });
+
         if(document.getElementById("showValues").checked == true){
 			node.append("foreignObject")
 				.attr("width", 80)
