--- a/src/pylowl/proj/brightside/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/postproc/subgraphs.html
@@ -332,6 +332,7 @@ d3.json("subgraphs.json", function(error, root) {
         return min_var_param;
     }
 
+    maxNodeSize = 0;
 	maxNodeSize = maximum_Node_Size_rootParent(maxNodeSize, $root);
 	maxEtime = maximum_param_rootParent($root, "expected_time");
     minEtime = minimum_param_rootParent($root, "expected_time");
