--- a/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
@@ -123,12 +123,11 @@ update_graphs = function() {
         graph_container.className = "graph_container";
         graphs_container.appendChild(graph_container);
 
-        var identifier = $root[c]["identifier"];
-        var identifier_container = document.createElement("div");
-        identifier_container.className = "identifier";
-        graph_container.appendChild(identifier_container);
-        var identifier_text = document.createTextNode(identifier);
-        identifier_container.appendChild(identifier_text);
+        var doc_id = $root[c]["doc_id"];
+        var doc_id_container = document.createElement("div");
+        graph_container.appendChild(doc_id_container);
+        var doc_id_text = document.createTextNode(doc_id);
+        doc_id_container.appendChild(doc_id_text);
 
         var inner_graph_container = document.createElement("div");
         graph_container.appendChild(inner_graph_container);
