--- a/src/pylowl/proj/brightside/m1/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m1/postproc/subgraphs.html
@@ -72,6 +72,9 @@ body {
 <script src="d3.v3.js"></script>
 <script>
 
+<script src="core.js"></script>
+<script>
+
 $window_size = 5;
 $window_start = 0;
 $num_windows = 0;
