--- a/src/pylowl/proj/brightside/postproc/graph.html
+++ b/src/pylowl/proj/brightside/postproc/graph.html
@@ -48,6 +48,9 @@ body {
 <script src="d3.v3.js"></script>
 <script>
 
+<script src="core.js"></script>
+<script>
+
 var diagonal = d3.svg.diagonal()
     .projection(function(d) { return [d.y, d.x]; });
 
