add graph/subgraph mutual hyperlinks

--- a/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
@@ -45,6 +45,7 @@ body {
 
 <div>
 	<div id="inputWindowParameters">
+    <div><a href="graph.html">graph</a></div>
     <div>
         navigate:
         <input type="button" onclick="shift_window(-1)"
