--- a/src/pylowl/proj/brightside/postproc/graph.html
+++ b/src/pylowl/proj/brightside/postproc/graph.html
@@ -41,7 +41,10 @@ body {
 </head>
 <body>
 
-<div id="showCounts"><label for="showValues">show counts: </label><input type="checkbox" onchange="update_graph();" id="showValues"/> </div>
+<div id="showCounts">
+    <div><a href="subgraphs.html">subgraphs</a></div>
+    <label for="showValues">show counts: </label><input type="checkbox" onchange="update_graph();" id="showValues"/>
+</div>
 <div id="graphs_container">
 </div>
 
