change subgraphs label in nav

--- a/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
@@ -56,7 +56,7 @@ body {
         size="3" type="text" onchange="update_window_size()" />
     </div>
     <div id="status">
-        showing graphs <span id="window_start_text"></span> to
+        showing subgraphs <span id="window_start_text"></span> to
         <span id="window_end_text"></span> of <span
             id="num_graphs_text"></span>
     </div>
